fixed vector overflow

--- a/Lesson1/styles/base_styles.css
+++ b/Lesson1/styles/base_styles.css
@@ -72,7 +72,7 @@ main.main-content {
     overflow-y: scroll;
     scroll-snap-type: y proximity;
     scroll-behavior: smooth;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .training-container {
